Разработал эндпоинт для удаления storage из favorites. Заменил магические строки storage type на константы folder или deck.
