# handlers/api/v1/library.go
@@ -62,6 +62,36 @@ func AddStorageToFavorite(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusInternalServerError, gin.H{
-		"message": "Successfully added to favorite storages",
+		"message": "Successfully added the storage to favorites",
+	})
+}
+
+// RemoveStorageFromFavorite godoc
+// @Id			 removeStorageFromFavorite
+// @Summary      remove the storage from favorites by user id, storage id and storage type
+// @Description  deletes the favorite storage in the database
+// @Tags         library
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param		 user_id	  path		string	true	"User ID" minlength(36)  maxlength(36)
+// @Param		 storage_type path		string	true	"Storage type" Enums(deck, folder)
+// @Param		 storage_id	  path		string	true	"Storage ID" minlength(36)  maxlength(36)
+// @Success      201  {object}  httputils.BasicResponse
+// @Failure      500  {object}  httputils.HTTPError
+// @Router       /library/{user_id}/{storage_type}/{storage_id} [delete]
+func RemoveStorageFromFavorite(c *gin.Context) {
+	userId := c.Param("user_id")
+	storageType := c.Param("storage_type")
+	storageId := c.Param("storage_id")
+
+	err := models.DeleteFavoriteStorage(userId, storageId, storageType)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusInternalServerError, gin.H{
+		"message": "Successfully remove the storage from favorites",
 	})
 }
